Add Redis connection and add GetPosts endpoint
